feat: Fully added JavaLang & add IRP models for GO and Java & added rename library func
